# studio_submit_2026_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  the_rogue_battle  todo.md
.github/workflows/: main.yml
Sounds/: background_sound.mod  space_alliance.mod  space_chorus.mod
images/: _csv_gen.py  image_to_palette_magick.py  pixelart.bat
images/generated_images/: backgroundcolor.txt  prompt for powerup.txt
images/generated_images/2026-03-18/: Generator prompt.txt
images/output/: palette_colors.txt  sprites.txt
images/output/128x128/: 3 shots.csv  EnemySelector.csv  PlayerSelector.csv  explosion.csv  fast shot.csv  more_source.csv  penetration.csv  shield.csv  slow.csv
images/output/256x128/: Title.csv
images/output/32x32/: Bullet.csv
images/output/512X512/: Title.csv
images/output/64x64/: Enemy.csv  Player.csv
src/: Alpha.cpp  Alpha.h  AlphaManager.cpp  AlphaManager.h  BattleState.cpp  BattleState.h  Bullet.cpp  Bullet.h  ButtonA.cpp  ButtonA.h  DestinyManager.cpp  DestinyManager.h  Ease.cpp  Ease.h  EasingManager.cpp  EasingManager.h  EndGameState.cpp  EndGameState.h  Explosion.h  Firework.cpp  Firework.h  GameConfig.h  GameManager.cpp  GameManager.h  HighScoreState.cpp  HighScoreState.h  ImprovementSelectionState.cpp  ImprovementSelectionState.h  InitialMovementState.cpp  InitialMovementState.h  InputManager.cpp  InputManager.h  LinuxPainter.cpp  LinuxPainter.h  Main.cpp  MainMenuState.cpp  MainMenuState.h  Meteorite.h  NumberManager.cpp  NumberManager.h  (+22 more)
src/config/: CoordsConfig.h  EnemyConfiguration.h  FireworkConfig.h  HighScoreConfiguration.h  ImprovementsConfig.h  TimesConfig.h  TrailConfiguration.h
